Fixed error causing grid to overflow border on some devices when grid size increased

--- a/styles.css
+++ b/styles.css
@@ -59,30 +59,33 @@
 .grid-container {
     border: 1px solid black;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    aspect-ratio: 1;
     width: 96%;
     max-width: 500px;
     height: 96vw;
     max-height: 500px;
-    margin: 20px auto;
+    margin: 20px 0;
+    padding: 0;
     box-sizing: border-box;
     margin-bottom: 50px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     background-color: white;
     cursor: pointer;
+    overflow: hidden;
   }
-  
+
   .row {
     display: flex;
-    flex: 1;
-    width: 100%;
+    flex-wrap: wrap;
+    margin-right: -0.5px;
   }
   
   .cell {
-    flex: 1;
+    flex: 0 0 calc(100% / var(--grid-size));
     border: 0.5px solid black;
     box-sizing: border-box;
     transition: 0.2s;
     aspect-ratio: 1;
-    padding: 4px;
+    margin-bottom: -0.5px;
   }
